package cr.ac.una.glifo.pipeline.model

enum class RegionKind {
    TEXT,
    MATH,
    DRAWING
}
